<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background_front">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">

        <EditText
            android:id="@+id/login_page_edit_text_login"
            style="@style/EditTextCustomHolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_input_login" />


        <EditText
            android:id="@+id/login_page_edit_text_pass"
            style="@style/EditTextCustomHolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_page_edit_text_login"
            android:hint="@string/hint_input_pass"
            android:layout_marginTop="8dp"
            />

        <EditText
            android:id="@+id/login_page_edit_text_pass_confirm"
            style="@style/EditTextCustomHolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_page_edit_text_pass"
            android:hint="@string/hint_input_pass_confirm"
            android:layout_marginTop="8dp"
            />

        <Button
            android:id="@+id/login_page_login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_page_edit_text_pass_confirm"
            android:layout_marginTop="48dp"
            android:text="@string/hint_registration"
            android:textSize="20sp"
            style="@style/Buttons" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_page_login_button"
            android:text="@string/link_login"
            android:layout_marginTop="16dp"
            style="@style/Links"
            />




    </RelativeLayout>

</RelativeLayout>